# Simulation-of-localization-delocalization-of-electrons-moving-in-a-layer-of-nanocrystals

./: README.md
c++_version/: main.cpp
draw-trajectories-go/: .gitignore  go.mod  main.go
notes/: #Equations.lyx#  Equations.lyx  Equations.lyx~  Finite_difference_methods.lyx  Finite_difference_methods.lyx~  Записи 22 марта 2022.docx  Система уравнений для движения электронов в слое наноструктур В3.docx  Теория Друде.docx
rust_version/: .gitignore  Cargo.toml  ESC_parameters.r  README.md  plot.r  trajectories
rust_version/src/: draw.rs  file.rs  main.rs  palettes.rs  plot.rs  runge_kutta.rs
vector_rust_version/src/: draw.rs  file.rs  main.rs  palettes.rs  plot.rs
